--- a/app/views/modal-templates/advice-1.html
+++ b/app/views/modal-templates/advice-1.html
@@ -3,18 +3,16 @@
 
   <div class="advice-modal-content-section">
     <div class="modal-content-paragraph">
-      <div class="advice-modal-content-text">
-        <p>
-          Antes comenzar a pintar es importante saber que las pinturas son productos de “terminación”, es decir son para protección y decorativas. Así, resultan el último paso en la puesta a punto del elemento a pintar (por ejemplo una pared, una madera, una reja, un caño, etc). Por ello y a fin de que el producto se destaque correctamente, es indispensable que la superficie a pintar se encuentre en buenas condiciones. Además, tenga en cuenta los siguientes consejos: 
-        </p>
-      </div>
+      <p class="advice-modal-content-text">
+        Antes comenzar a pintar es importante saber que las pinturas son productos de “terminación”, es decir son para protección y decorativas. Así, resultan el último paso en la puesta a punto del elemento a pintar (por ejemplo una pared, una madera, una reja, un caño, etc). Por ello y a fin de que el producto se destaque correctamente, es indispensable que la superficie a pintar se encuentre en buenas condiciones. Además, tenga en cuenta los siguientes consejos: 
+      </p>
     </div>
 
     <div class="modal-content-paragraph">
       <span class="waring-icon"></span>
-      <div class="advice-modal-content-text">
+      <p class="advice-modal-content-text">
         a) Inspeccione las superficies para determinar los defectos que existen y las herramientas que se necesitan para solucionarlos. Asimismo, descubra qué tipo de terminación se ha utilizado previamente para así seleccionar la correcta imprimación o sellador.
-      </div>
+      </p>
     </div>
 
     <div class="modal-content-paragraph">
@@ -26,21 +24,21 @@
 
   <div class="advice-modal-content-section">
     <div class="modal-content-paragraph">
-      <div class="advice-modal-content-text">
+      <p class="advice-modal-content-text">
         *En caso de que las paredes fueran previamente pintada, además:
-      </div>
+      </p>
     </div>
 
     <div class="modal-content-paragraph">
-      <div class="advice-modal-content-text">
+      <p class="advice-modal-content-text">
         c) La superficie debe estar limpia, seca y libre de cualquier suciedad. Por lo tanto,  lave las paredes eliminando  todo resto de grasa, polvo o manchas. 
-      </div>
+      </p>
     </div>
     
     <div class="modal-content-paragraph">
-      <div class="advice-modal-content-text">
+      <p class="advice-modal-content-text">
         d) Rellene los agujeros o rayones con <i>Enduido Plástico al Agua Prima Facie</i>.
-      </div>
+      </p>
     </div>
   </div>
 </div>
