History & vision sections layout

--- a/styles/less/company.less
+++ b/styles/less/company.less
@@ -38,11 +38,15 @@
     color: @c_white;
     text-transform: capitalize;
   }
+}
 
-  .company-box-text {
-    align-self: flex-start;
-    color: @c_white;
-    font-family: 'Quattrocento', serif;
-    margin: 12px 0;
-  }
+.company-box-text-wrapper {
+  flex-grow: 1;
+}
+
+.company-box-text {
+  align-self: flex-start;
+  color: @c_white;
+  font-family: 'Quattrocento', serif;
+  margin: 12px 0;
 }
