--- a/styles/less/global.less
+++ b/styles/less/global.less
@@ -5,6 +5,15 @@ section {
   justify-content: center;
 }
 
+.home-wrapper {
+  position: relative;
+  top: 86px;
+
+  @media @small-screen {
+    top: 0;
+  }
+}
+
 .layout {
   max-width: @viewport_width;
   width: 100%;
