--- a/styles/less/images.less
+++ b/styles/less/images.less
@@ -25,3 +25,8 @@
 @company-background: url("@{assets-url}/empresaVision_background.png");
 
 @foot-background: url("@{assets-url}/foot_background.png");
+
+@history-header: url("@{assets-url}/header_history.png");
+@history-image-1: url("@{assets-url}/history_image_1.png");
+@history-image-2: url("@{assets-url}/history_image_2.png");
+@history-image-3: url("@{assets-url}/history_image_3.png");
