--- a/app/views/modal-templates/advice-5.html
+++ b/app/views/modal-templates/advice-5.html
@@ -6,11 +6,14 @@
   </div>
 
   <div class="advice-modal-content-section">
-    <h4 class="modal-content-subtitle">Cuarteado:</h4>
-    <div class="advice-modal-content-text">¿QUÉ ES? Son quebraduras de la película de pintura.</div>
+    <div class="modal-content-paragraph">
+      <h4 class="modal-content-subtitle">Cuarteado:</h4>
+      <div class="advice-modal-content-text">¿QUÉ ES? Son quebraduras de la película de pintura.</div>
+    </div>
+
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle">Causas</div>
-      <ul class="advice-modal-common-problem-list">
+      <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
           Múltiples capas de pinturas envejecidas que se debilitan y comienzan a quebrarse 
         </li>
@@ -42,7 +45,7 @@
     </div>
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle">Soluciones</div>
-      <ul class="advice-modal-common-problem-list">
+      <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
           Remover toda la pintura cuarteada con espátula de forma manual o con medios mecánicos.
         </li>
@@ -63,11 +66,14 @@
   </div>
 
   <div class="advice-modal-content-section">
-    <h4 class="modal-content-subtitle">Ampollado:</h4>
-    <div class="advice-modal-content-text">¿QUE ES? Son “burbujas” redondeadas sobre la película de pintura.</div>
+    <div class="modal-content-paragraph">
+      <h4 class="modal-content-subtitle">Ampollado:</h4>
+      <div class="advice-modal-content-text">¿QUE ES? Son “burbujas” redondeadas sobre la película de pintura.</div>
+    </div>
+      
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle">Causas</div>
-      <ul class="advice-modal-common-problem-list">
+      <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
           Presencia de humedad en la superficie pintada.
         </li>
@@ -84,7 +90,7 @@
 
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle">Soluciones</div>
-      <ul class="advice-modal-common-problem-list">
+      <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
           Investigar y reparar el origen de la humedad (por ejemplo fallas de impermeabilidad, filtraciones, humedad de cimientos, rotura de algún caño de agua, etc.).
         </li>
@@ -105,11 +111,14 @@
   </div>
 
   <div class="advice-modal-content-section">
-    <h4 class="modal-content-subtitle">Tizado:</h4>
-    <div class="advice-modal-content-text">¿QUE ES? Es el desprendimiento de la pintura, generalmente luego de una prolongada exposición a la intemperie.</div>
+    <div class="modal-content-paragraph">
+      <h4 class="modal-content-subtitle">Tizado:</h4>
+      <div class="advice-modal-content-text">¿QUE ES? Es el desprendimiento de la pintura, generalmente luego de una prolongada exposición a la intemperie.</div>
+    </div>
+
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle">Causas</div>
-      <ul class="advice-modal-common-problem-list">
+      <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
           Aplicación de pinturas interiores en exteriores.
         </li>
@@ -121,7 +130,7 @@
 
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle">Soluciones</div>
-      <ul class="advice-modal-common-problem-list">
+      <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
           Remover el polvo flojo y lavar con agua.
         </li>
@@ -136,11 +145,14 @@
   </div>
 
   <div class="advice-modal-content-section">
-    <h4 class="modal-content-subtitle">Desprendimiento:</h4>
-    <div class="advice-modal-content-text">¿QUE ES? Es el desprendimiento de la película de pintura. </div>
+    <div class="modal-content-paragraph">
+      <h4 class="modal-content-subtitle">Desprendimiento:</h4>
+      <div class="advice-modal-content-text">¿QUE ES? Es el desprendimiento de la película de pintura. </div>
+    </div>
+
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle">Causas</div>
-      <ul class="advice-modal-common-problem-list">
+      <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
           Aplicación de la pintura sobre un fondo incorrecto.
         </li>
@@ -155,7 +167,7 @@
 
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle">Soluciones</div>
-      <ul class="advice-modal-common-problem-list">
+      <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
           Remover toda pintura floja y lavar con agua.
         </li>
@@ -173,11 +185,14 @@
   </div>
 
   <div class="advice-modal-content-section">
-    <h4 class="modal-content-subtitle">Arrugado:</h4>
-    <div class="advice-modal-content-text">¿QUE ES? Son “arrugas” que surgen de la película de pintura.</div>
+    <div class="modal-content-paragraph">
+      <h4 class="modal-content-subtitle">Arrugado:</h4>
+      <div class="advice-modal-content-text">¿QUE ES? Son “arrugas” que surgen de la película de pintura.</div>
+    </div>
+
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle">Causas</div>
-      <ul class="advice-modal-common-problem-list">
+      <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
           Aplicación de pinturas en exceso.
         </li>
@@ -195,7 +210,7 @@
 
     <div class="modal-content-paragraph">
       <div class="modal-content-subtitle">Soluciones</div>
-      <ul class="advice-modal-common-problem-list">
+      <ul class="advice-modal-list">
         <li class="advice-modal-list-item">
           En caso de existir humedad, investigar y reparar el origen de la misma (por ejemplo fallas de impermeabilidad, filtraciones, humedad de cimientos, rotura de algún caño de agua, etc.). 
         </li>
