--- a/styles/less/advice.less
+++ b/styles/less/advice.less
@@ -37,3 +37,31 @@
     margin: 12px;
   }
 }
+
+.advice-modal-content-text {
+  margin: 12px 0;
+}
+
+.advice-modal-list {
+  padding-left: 48px;
+  
+  li {
+    display: block;
+  }
+}
+
+.advice-modal-application-order-list {
+  padding-left: 48px;
+  
+  li {
+    display: block;
+  }
+}
+
+.modal-content-tools-list {
+  padding-left: 48px;
+  
+  li {
+    display: block;
+  }
+}
