--- a/app/views/modal-templates/advice-7.html
+++ b/app/views/modal-templates/advice-7.html
@@ -2,17 +2,17 @@
   <h3 class="modal-content-title">Herramientas</h3>
 
   <div class="modal-content-section">
-    <h4 class="modal-content-subtitle">Rodillos</h4>
+    <h4 class="modal-content-subtitle">* Rodillos</h4>
     <div class="modal-content-paragraph">
       <ul class="modal-content-tools-list">
         <li class="modal-content-tools-list-item">
-          Rodillos de pelo corto: son mejores para las pinturas a base solvente. Resultan ideales para pinturas brillantes o para pintar sobre superficies lisas.
+          - Rodillos de pelo corto: son mejores para las pinturas a base solvente. Resultan ideales para pinturas brillantes o para pintar sobre superficies lisas.
         </li>
         <li class="modal-content-tools-list-item">
-          Rodillo de pelo mediano: se utilizan para pinturas a base de agua. 
+          - Rodillo de pelo mediano: se utilizan para pinturas a base de agua. 
         </li>
         <li class="modal-content-tools-list-item">
-          Rodillos de pelo largo: son ideales para superficies rugosas o con textura. Se utiliza para aplicar revestimientos.
+          - Rodillos de pelo largo: son ideales para superficies rugosas o con textura. Se utiliza para aplicar revestimientos.
         </li>
       </ul>
     </div>
@@ -22,13 +22,13 @@
       </div>
       <ul class="modal-content-tools-list">
         <li class="modal-content-tools-list-item">
-          230 - 270 mm para las paredes, techos, suelos y caminos.
+          - 230 - 270 mm para las paredes, techos, suelos y caminos.
         </li>
         <li class="modal-content-tools-list-item">
-          30 - 180 mm para grandes armarios, puertas y muebles
+          - 30 - 180 mm para grandes armarios, puertas y muebles
         </li>
         <li class="modal-content-tools-list-item">
-          80 - 130 mm para los adornos, pequeñas superficies, hierro forjado y marcos.
+          - 80 - 130 mm para los adornos, pequeñas superficies, hierro forjado y marcos.
         </li>
       </ul>
     </div>
@@ -38,50 +38,50 @@
       </div>
       <ul class="modal-content-tools-list">
         <li class="modal-content-tools-list-item">
-          Para pinturas base agua girar el rodillo para eliminar el polvo. Luego enjuagar con agua para eliminar las fibras sueltas. 
+          - Para pinturas base agua girar el rodillo para eliminar el polvo. Luego enjuagar con agua para eliminar las fibras sueltas. 
         </li>
         <li class="modal-content-tools-list-item">
-          Para pinturas base solvente enjuagar el rodillo en aguarrás mineral, girar y dejar secar. 
+          - Para pinturas base solvente enjuagar el rodillo en aguarrás mineral, girar y dejar secar. 
         </li>
       </ul>
     </div>
   </div>
 
   <div class="modal-content-section">
-    <h4 class="modal-content-subtitle">Pinceles</h4>
+    <h4 class="modal-content-subtitle">* Pinceles</h4>
     <div class="modal-content-paragraph">
       <div class="advice-modal-content-text">
         ¿Como elegir el tamaño correcto de pincel?:
       </div>
       <ul class="modal-content-tools-list">
         <li class="modal-content-tools-list-item">
-          Pinceles de 100 mm o más ancho: son ideales para grandes superficies tales como paredes, techos, suelos, chimeneas, tejas, embarcaciones y piscinas. Este tipo de pinceles pueden cargar una gran cantidad de pintura, por lo que probablemente resulten ser pesados para un usuario inexperto.
+          - Pinceles de 100 mm o más ancho: son ideales para grandes superficies tales como paredes, techos, suelos, chimeneas, tejas, embarcaciones y piscinas. Este tipo de pinceles pueden cargar una gran cantidad de pintura, por lo que probablemente resulten ser pesados para un usuario inexperto.
         </li>
         <li class="modal-content-tools-list-item">
-          Pinceles de 65 - 75 mm: son adecuados para medianas y grandes áreas como armarios, suelos, escaleras,  puertas, zócalos, grandes tuberías, vallas y mobiliario de exterior.
+          - Pinceles de 65 - 75 mm: son adecuados para medianas y grandes áreas como armarios, suelos, escaleras,  puertas, zócalos, grandes tuberías, vallas y mobiliario de exterior.
         </li>
         <li class="modal-content-tools-list-item">
-          Pinceles de 38 - 50mm: son los mejores para trabajos pequeños a medianos tales como puertas, mesas, armarios, muebles, pequeños paneles, marcos de ventanas, molduras, persianas, pergolas y herramientas de jardinería.
+          - Pinceles de 38 - 50mm: son los mejores para trabajos pequeños a medianos tales como puertas, mesas, armarios, muebles, pequeños paneles, marcos de ventanas, molduras, persianas, pergolas y herramientas de jardinería.
         </li>
         <li class="modal-content-tools-list-item">
-          Pinceles de 12 - 25 mm: son ideales para muy pequeños trabajos, donde resulta difícil llegar a las áreas a pintar. Asimismo, son buenos para juguetes, sillas, etc.
+          - Pinceles de 12 - 25 mm: son ideales para muy pequeños trabajos, donde resulta difícil llegar a las áreas a pintar. Asimismo, son buenos para juguetes, sillas, etc.
         </li>
       </ul>
     </div>
   </div>
 
   <div class="modal-content-section">
-    <h4 class="modal-content-subtitle">Lijas</h4>
+    <h4 class="modal-content-subtitle">* Lijas</h4>
     <div class="modal-content-paragraph">
       <ul class="modal-content-tools-list">
         <li class="modal-content-tools-list-item">
-          Grano Fino: se utilizan para lijar paredes con enduido, paredes ya pintadas o maderas sin pintar.
+          - Grano Fino: se utilizan para lijar paredes con enduido, paredes ya pintadas o maderas sin pintar.
         </li>
         <li class="modal-content-tools-list-item">
-          Grano Mediano: se emplean para emparejar maderas ya pintadas.
+          - Grano Mediano: se emplean para emparejar maderas ya pintadas.
         </li>
         <li class="modal-content-tools-list-item">
-          Grano Grueso: se utilizan para lijar hierros y metales.
+          - Grano Grueso: se utilizan para lijar hierros y metales.
         </li>
       </ul>
     </div>
