--- a/styles/less/modal-content.less
+++ b/styles/less/modal-content.less
@@ -1,3 +1,16 @@
+.modal-content-section {
+  padding: 24px;
+}
+
+.modal-content-title {
+  margin: 24px;
+  text-align: right;
+}
+
+.modal-content-paragraph {
+  margin: 24px;
+}
+
 .advice-modal-list-item {
   display: block;
 }
