cambios mínimos estéticos

--- a/styles/less/inspiration.less
+++ b/styles/less/inspiration.less
@@ -48,8 +48,13 @@
   flex: 1;
   flex-direction: column;
   margin: 24px;
-  padding: 18px;
+  padding: 40px;
   min-width: 300px;
+  text-align: center;
+  h4 {font-size: 24px;
+    font-weight: 700;}
+    p {font-size: 18px;}
+
 
   @media @small-screen {
     margin: 12px;
@@ -72,6 +77,6 @@
 
 .inspiration-box-text {
   color: @c_white;
-  font-family: 'Quattrocento', serif;
+ // font-family: 'Quattrocento', serif;
   padding-top: 24px;
 }
