--- a/styles/less/colors.less
+++ b/styles/less/colors.less
@@ -11,6 +11,7 @@
 
 @c_yellow_01: #F8E71C; //main
 @c_yellow_02: #F5D63D;
+@c_yellow_03: rgba(248, 231, 28, 0.9);
 
 @c_blue_01: #4A90E2;
 @c_blue_02: #78C5D6;
