--- a/styles/less/advice.less
+++ b/styles/less/advice.less
@@ -7,7 +7,9 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 890px;
+  min-height: 600px;
+  //height: 890px;
+  height: 100%;
   padding: 50px 0;
   width: 100%;
 
