--- a/styles/less/base.less
+++ b/styles/less/base.less
@@ -13,6 +13,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 button {
@@ -47,7 +48,7 @@ input {
 }
 
 h1 {
-  font-size: 89px;
+  font-size: 69px;
   font-weight: 500;
   margin: 0;
   text-align: center;
@@ -59,8 +60,8 @@ h1 {
 }
 
 h3 {
-  font-size: 36px;
-  font-weight: 500;
+  font-size: 28px;
+  font-weight: 100;
   line-height: 49px;
   margin: 0;
   text-transform: uppercase;
