--- a/styles/less/footer.less
+++ b/styles/less/footer.less
@@ -7,8 +7,9 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 600px;
+  height: 300px;
   width: 100%;
+  border-bottom: 8px solid @c_yellow_02;
 }
 
 .footer {
@@ -35,8 +36,8 @@
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  height: 128px;
-  width: 218px;
+  height: 59px;
+  width: 100px;
 
   @media @small-screen {
     height: 102px;
@@ -56,18 +57,18 @@
 }
 
 .footer-title {
-  @media @small-screen {
-    font-size: 18px;
-    line-height: 18px;
-  }
+  font-size: 12px;
+  font-weight: 700;
+  margin: 0;
+  padding: 0;
+  line-height: 16px; 
+  
 }
 
 .footer-text {
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 8px;
+  line-height: 12px;
+  text-transform: uppercase;
 
-  @media @small-screen {
-    font-size: 14px;
-    line-height: 18px;
-  }
+  
 }
