--- a/styles/less/buttons.less
+++ b/styles/less/buttons.less
@@ -1,15 +1,21 @@
 @import 'colors.less';
 
 .green-button {
-  background-color: @c_green;
-  border: 1px solid @c_white;
+  background-color: @c_blue_01;
+  border: 4px solid @c_white;
   border-radius: 40px;
   color: @c_white;
-  font-size: 26px;
+  font-size: 21px;
   line-height: 36px;
   margin: 12px;
   padding: 24px;
   white-space: nowrap;
+  font-weight: 700;
+o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition:.5s;
 
   @media @small-screen {
     font-size: 14px;
@@ -36,6 +42,13 @@
   line-height: 24px;
   margin: 12px;
   padding: 12px 48px;
+  o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition:.5s;
+  &:hover {background-color: @c_red;
+    color: @c_white;}
 
   @media @small-screen {
     font-size: 14px;
@@ -44,13 +57,7 @@
     padding: 12px 24px;
   }
 
-  &:focus {
-    color: @c_grays_04;
-  }
-
-  &:hover {
-    color: @c_grays_04;
-  }
+  
 }
 
 .blue-button {
@@ -86,7 +93,7 @@
   align-items: center;
   display: inline-flex;
   padding: 12px 36px;
-
+  &:hover {background-color: @c_green;}
   .icon-calculadora {
     font-size: 34px;
     vertical-align: middle;
@@ -116,3 +123,14 @@
   padding: 12px 48px;
   text-transform: uppercase;
 }
+.text-button {color: @c_white;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 700;
+  
+  border: 1px solid @c_white;
+  border-radius: 40px;
+   padding: 12px 48px;
+   &:hover {background: @c_green;
+    color: @c_white;}
+  }
