--- a/styles/less/home.less
+++ b/styles/less/home.less
@@ -8,7 +8,9 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 1004px;
+  height: 100%;
+  min-height: 100%;
+  max-height: 100%;
   width: 100%;
 
   @media @small-screen {
@@ -27,7 +29,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   height: 496px;
-  min-width: 300px;
+  min-width: 50%;
   flex-grow: 1;
 
   @media @small-screen {
