--- a/styles/less/inspiration.less
+++ b/styles/less/inspiration.less
@@ -7,9 +7,11 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 890px;
+  //height: 890px;
+  height: 100%;
+  min-height: 600px;
   width: 100%;
-  padding: 100px 0;
+  padding: 50px 0;
 
   @media @small-screen {
     padding: 24px;
@@ -35,7 +37,7 @@
   flex-grow: 1;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 36px;
+
 
   @media @small-screen {
     padding: 0;
@@ -51,9 +53,8 @@
   padding: 40px;
   min-width: 300px;
   text-align: center;
-  h4 {font-size: 24px;
-    font-weight: 700;}
-    p {font-size: 18px;}
+
+
 
 
   @media @small-screen {
@@ -73,10 +74,15 @@
 .inspiration-box-title {
   color: @c_white;
   margin: 0;
+  text-transform: uppercase;
+    font-weight: 700;
+    padding-top: 10px
 }
 
 .inspiration-box-text {
   color: @c_white;
- // font-family: 'Quattrocento', serif;
-  padding-top: 24px;
+  font-weight: 100;
+  padding-top: 14px;
+  letter-spacing: .5px;
+
 }
