--- a/styles/less/global.less
+++ b/styles/less/global.less
@@ -1,4 +1,5 @@
 @import 'blocks.less';
+@import 'images.less';
 
 section {
   display: flex;
@@ -14,7 +15,17 @@ section {
   }
 }
 
+.loader {
+  background-image: @loader;
+  background-position: center;
+  background-size: contain;
+  margin: 48px auto;
+  height: 50px;
+  width: 50px;
+}
+
 .layout {
+  margin: 0 auto;
   max-width: @viewport_width;
   width: 100%;
 }
