--- a/styles/less/images.less
+++ b/styles/less/images.less
@@ -1,32 +1,39 @@
-@assets-url: "../../assets/images";
+@images-assets-url: "../../assets/images";
+@icons-assets-url: "../../assets/icons";
 
-@logo: url("@{assets-url}/Cibel.svg");
-@logo-header: url("@{assets-url}/Logo_header.svg");
-@logo-footer: url("@{assets-url}/Cibel.svg");
+@logo: url("@{images-assets-url}/Cibel.svg");
+@logo-header: url("@{images-assets-url}/Logo_header.svg");
+@logo-footer: url("@{images-assets-url}/Cibel.svg");
 
-@modal-header: url("@{assets-url}/header_pop.png");
-@modal-footer: url("@{assets-url}/footer_pop.png");
+@loader: url("@{icons-assets-url}/spin.svg");
 
-@header-main: url("@{assets-url}/header_main.png");
+@modal-header: url("@{images-assets-url}/header_pop.png");
+@modal-footer: url("@{images-assets-url}/footer_pop.png");
 
-@home-background: url("@{assets-url}/home_background.png");
-@home-pots: url("@{assets-url}/potes_home.png");
+@header-main: url("@{images-assets-url}/header_main.png");
 
-@products-interior: url("@{assets-url}/productos_interior.png");
-@products-exterior: url("@{assets-url}/productos_exterior.png");
-@products-maderas: url("@{assets-url}/productos_madera.png");
-@products-fondos: url("@{assets-url}/productos_fondos.png");
-@products-industrial: url("@{assets-url}/productos_industrial.png");
+@home-background: url("@{images-assets-url}/home_background.png");
+@home-pots: url("@{images-assets-url}/potes_home.png");
 
-@advice-background: url("@{assets-url}/consejos_background.png");
+@products-interior: url("@{images-assets-url}/productos_interior.png");
+@products-exterior: url("@{images-assets-url}/productos_exterior.png");
+@products-maderas: url("@{images-assets-url}/productos_madera.png");
+@products-fondos: url("@{images-assets-url}/productos_fondos.png");
+@products-industrial: url("@{images-assets-url}/productos_industrial.png");
 
-@inspiration-background: url("@{assets-url}/inspiracion_background.png");
+@product-application: url("@{images-assets-url}/producto_aplicacionProducto.png");
+@product-compose: url("@{images-assets-url}/producto_componerColores.png");
+@product-surface: url("@{images-assets-url}/producto_preparacionSuperficie.png");
 
-@company-background: url("@{assets-url}/empresaVision_background.png");
+@advice-background: url("@{images-assets-url}/consejos_background.png");
 
-@foot-background: url("@{assets-url}/foot_background.png");
+@inspiration-background: url("@{images-assets-url}/inspiracion_background.png");
 
-@history-header: url("@{assets-url}/header_history.png");
-@history-image-1: url("@{assets-url}/history_image_1.png");
-@history-image-2: url("@{assets-url}/history_image_2.png");
-@history-image-3: url("@{assets-url}/history_image_3.png");
+@company-background: url("@{images-assets-url}/empresaVision_background.png");
+
+@foot-background: url("@{images-assets-url}/foot_background.png");
+
+@history-header: url("@{images-assets-url}/header_history.png");
+@history-image-1: url("@{images-assets-url}/history_image_1.png");
+@history-image-2: url("@{images-assets-url}/history_image_2.png");
+@history-image-3: url("@{images-assets-url}/history_image_3.png");
