Some style changes

--- a/styles/less/header.less
+++ b/styles/less/header.less
@@ -55,7 +55,12 @@
     line-height: 22px;
     padding: 0 36px;
     text-transform: uppercase;
-    &:hover {color: @c_orange_01;}
+    transition: 0.5s;
+    
+    &:hover {
+      color: @c_orange_01;
+    }
+
     .icon-arrow-down {
       font-size: 8px;
       margin-left: 6px;
