--- a/styles/less/products.less
+++ b/styles/less/products.less
@@ -105,7 +105,8 @@
   left: 0;
   height: 100%;
   width: 100%;
-  opacity: 0.8;
+  opacity: 0.6;
+  transition: 0.5s;
 }
 
 .product-category-label-wrapper {
@@ -181,6 +182,7 @@
   margin: 12px;
   padding: 12px;
   opacity: 0.8;
+  transition: 0.5s;
 
   &:hover {
     opacity: 1;
