--- a/styles/less/buttons.less
+++ b/styles/less/buttons.less
@@ -11,11 +11,7 @@
   padding: 24px;
   white-space: nowrap;
   font-weight: 700;
-o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  transition:.5s;
+  transition: 0.5s;
 
   @media @small-screen {
     font-size: 14px;
@@ -42,13 +38,12 @@ o-transition:.5s;
   line-height: 24px;
   margin: 12px;
   padding: 12px 48px;
-  o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  transition:.5s;
-  &:hover {background-color: @c_red;
-    color: @c_white;}
+  transition: 0.5s;
+
+  &:hover {
+    background-color: @c_red;
+    color: @c_white;
+  }
 
   @media @small-screen {
     font-size: 14px;
@@ -56,8 +51,6 @@ o-transition:.5s;
     margin: 6px;
     padding: 12px 24px;
   }
-
-  
 }
 
 .blue-button {
@@ -93,7 +86,11 @@ o-transition:.5s;
   align-items: center;
   display: inline-flex;
   padding: 12px 36px;
-  &:hover {background-color: @c_green;}
+  
+  &:hover {
+    background-color: @c_green;
+  }
+  
   .icon-calculadora {
     font-size: 34px;
     vertical-align: middle;
@@ -123,14 +120,19 @@ o-transition:.5s;
   padding: 12px 48px;
   text-transform: uppercase;
 }
-.text-button {color: @c_white;
-  font-size: 18px;
-  text-transform: uppercase;
-  font-weight: 700;
-  
+
+.text-button {
   border: 1px solid @c_white;
   border-radius: 40px;
-   padding: 12px 48px;
-   &:hover {background: @c_green;
-    color: @c_white;}
+  color: @c_white;
+  font-size: 18px;
+  font-weight: 700;
+  padding: 12px 48px;
+  text-transform: uppercase;
+  transition: 0.5s;
+  
+  &:hover {
+    background-color: @c_green;
+    color: @c_white;
   }
+}
