--- a/app/views/product-show.html
+++ b/app/views/product-show.html
@@ -118,10 +118,12 @@
             </div>
 
             <div class="product-extra-info-item">
-              <a ng-click="showLiterCalculatorSection()" class="liter-calculator-button">
-                <i class="icon-calculadora"></i>
-                <span class="liter-calculator-label">calculador de litros</span>
-              </a>
+              <div class="liter-calculator-button-wrapper">
+                <a ng-click="showLiterCalculatorSection()" class="liter-calculator-button">
+                  <i class="icon-calculadora"></i>
+                  <span class="liter-calculator-label">calculador de litros</span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
