Header menu dropdown. Moved dependencies to Webpack config. Some UI Responsive fixes.

--- a/app/views/liter-calculator.html
+++ b/app/views/liter-calculator.html
@@ -70,7 +70,10 @@
         </div>
 
         <div class="liter-calculator-button-wrapper">
-          <button class="back-button" ng-click="back()">volver</button>
+          <button class="back-button" ng-click="back()">
+            <i class="icon-arrow-back"></i>
+            volver
+          </button>
         </div>
       </div>
     </div>
