--- a/app/views/modal.html
+++ b/app/views/modal.html
@@ -1,7 +1,7 @@
 <div class="modal-window">
   <div class="modal-header">
     <div class="modal-nav">
-      <a class="modal-nav-button" ng-click="closeModal();">
+      <a class="modal-nav-button" ng-click="$parent.closeModal();">
         <i class="icon-cross-modal"></i>
       </a>
     </div>
