--- a/assets/fonts/icons/style.css
+++ b/assets/fonts/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?6x26xw');
-    src:    url('fonts/icomoon.eot?6x26xw#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?6x26xw') format('truetype'),
-        url('fonts/icomoon.woff?6x26xw') format('woff'),
-        url('fonts/icomoon.svg?6x26xw#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?z9bojw');
+    src:    url('fonts/icomoon.eot?z9bojw#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?z9bojw') format('truetype'),
+        url('fonts/icomoon.woff?z9bojw') format('woff'),
+        url('fonts/icomoon.svg?z9bojw#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,6 +24,9 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-back:before {
+    content: "\e911";
+}
 .icon-cross-modal:before {
     content: "\e90f";
 }
