--- a/styles/less/inspiration.less
+++ b/styles/less/inspiration.less
@@ -7,8 +7,6 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  //height: 890px;
-  height: 100%;
   min-height: 600px;
   width: 100%;
   padding: 50px 0;
@@ -28,16 +26,17 @@
 
   .layout {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
+    justify-content: space-around;
   }
 }
 
 .inspiration-box-wrapper {
+  align-items: stretch;
   display: flex;
-  flex-grow: 1;
   flex-wrap: wrap;
   justify-content: center;
-
+  margin: 48px 0;
 
   @media @small-screen {
     padding: 0;
@@ -54,11 +53,9 @@
   min-width: 300px;
   text-align: center;
 
-
-
-
   @media @small-screen {
     margin: 12px;
+    padding: 12px;
   }
 }
 
@@ -73,16 +70,15 @@
 
 .inspiration-box-title {
   color: @c_white;
+  font-weight: 700;
   margin: 0;
+  padding-top: 10px;
   text-transform: uppercase;
-    font-weight: 700;
-    padding-top: 10px
 }
 
 .inspiration-box-text {
   color: @c_white;
   font-weight: 100;
-  padding-top: 14px;
-  letter-spacing: .5px;
-
+  margin-top: 14px;
+  letter-spacing: 0.5px;
 }
