Responsive UI changes

--- a/app/views/liter-calculator.html
+++ b/app/views/liter-calculator.html
@@ -33,14 +33,14 @@
               <input type="radio" ng-model="parameterType" value="squareMeter">
               Metros cuadrados (m2)
             </div>
-            <input type="text" ng-model="squareMeter" placeholder="Metros cuadrados (m2)">
+            <input type="text" ng-model="squareMeter" placeholder="Metros cuadrados (m2)"  class="text-input">
           </div>
           <div class="liter-calculator-input">
             <div class="radio-button-input-wrapper">
               <input type="radio" ng-model="parameterType" value="manual">
               Ancho y largo
             </div>
-            <div>
+            <div class="liter-calculator-input-wrapper">
               <input type="text" ng-model="width" placeholder="Ancho" class="text-input">
               <input type="text" ng-model="large" placeholder="Largo" class="text-input">
             </div>
