--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -22,8 +22,9 @@
   width: 100%;
 
   @media @small-screen {
-    padding: 12px;
+    height: 160px;
     margin: 0;
+    padding: 12px;
   }
 
   .layout {
