--- a/styles/less/social.less
+++ b/styles/less/social.less
@@ -11,6 +11,11 @@
   line-height: 64px;
   margin-left: 24px;
   margin-right: auto;
+
+  @media @small-screen {
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
 
 .social-section-header-pots-image {
@@ -21,6 +26,10 @@
   height: 220px;
   margin-top: 48px;
   width: 260px;
+
+  @media @small-screen {
+    display: none;
+  }
 }
 
 .social-section-content-subtitle-wrapper {
