--- a/app/views/product-index.html
+++ b/app/views/product-index.html
@@ -17,7 +17,7 @@
           <div class="loader" ng-hide="productsLoaded"></div>
 
           <div class="product-list" ng-show="productsLoaded">
-            <div class="product-list-item" ng-click="showProductSection(product)" ng-repeat="product in products">
+            <div class="product-list-item" ng-click="showProductSection(product)" ng-repeat="product in products | filter: filterProduct">
               <div class="product-list-item-image-wrapper">
                 <img class="product-list-item-image" ng-src="{{ product.fields.imagen.fields.file.url }}" alt="{{ product.fields.imagen.fields.title }}">
               </div>
