--- a/styles/less/inspiration.less
+++ b/styles/less/inspiration.less
@@ -82,3 +82,11 @@
   margin-top: 14px;
   letter-spacing: 0.5px;
 }
+
+.inspiration-modal-subtitle {
+  margin: 12px;
+}
+
+.inspiration-modal-content-subtitle {
+  font-weight: 600;
+}
