--- a/styles/less/social.less
+++ b/styles/less/social.less
@@ -15,6 +15,7 @@
   @media @small-screen {
     font-size: 24px;
     line-height: 24px;
+    margin-left: 12px;
   }
 }
 
@@ -55,6 +56,12 @@
   flex-shrink: 0;
   height: 80px;
   width: 120px;
+
+  @media @small-screen {
+    height: 60px;
+    margin: 12px;
+    width: 100px;
+  }
 }
 
 .social-section-content-text {
