--- a/styles/less/liter-calculator.less
+++ b/styles/less/liter-calculator.less
@@ -29,7 +29,8 @@
 
   @media @small-screen {
     font-size: 24px;
-    line-height: 24px
+    line-height: 24px;
+    margin-left: 0;
   }
 }
 
@@ -49,7 +50,7 @@
 
 .liter-calculator-form {
   padding: 48px 0;
-  color: @c_grays_03;
+  color: @c_grays_04;
 
   @media @small-screen {
     padding: 0;
@@ -61,7 +62,7 @@
 }
 
 .liter-calculator-text {
-  color: @c_grays_03;
+  color: @c_grays_04;
   font-weight: 700;
   margin: 16px;
 
@@ -93,7 +94,6 @@
 
 .liter-calculator-input-wrapper {
   display: flex;
-  margin-bottom: 12px;
 
   @media @small-screen {
     flex-direction: column;
