--- a/styles/less/modal.less
+++ b/styles/less/modal.less
@@ -40,6 +40,10 @@
   position: relative;
   overflow: auto;
   width: 100%;
+
+  @media @small-screen {
+    height: 100%;
+  }
 }
 
 .modal-header {
@@ -92,6 +96,10 @@
   overflow: hidden;
   display: flex;
   flex-direction: column;
+
+  @media @small-screen {
+    margin-top: 0;
+  }
 }
 
 .modal-content-header {
@@ -99,8 +107,12 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 240px;
+  height: 120px;
   flex-shrink: 0;
+
+  @media @small-screen {
+    height: 80px;
+  }
 }
 
 .modal-template-wrapper {
@@ -113,8 +125,12 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 180px;
+  height: 80px;
   flex-shrink: 0;
+
+  @media @small-screen {
+    height: 60px;
+  }
 }
 
 .inspiration-modal-color-box-wrapper {
