UI minor changes. Bug fix in product combo inside liter calculator section

--- a/app/views/product-show.html
+++ b/app/views/product-show.html
@@ -93,7 +93,7 @@
       <div class="product-extra-info-section">
         <div class="layout">
           <div class="product-extra-info-items-wrapper">
-            <div class="product-extra-info-item">
+            <div class="product-extra-info-item" ng-if="product.componerColores">
               <div class="product-extra-info-header compose"></div>
               <div class="product-extra-info">
                 <p class="product-extra-info-key">Componer colores</p>
