--- a/styles/less/products.less
+++ b/styles/less/products.less
@@ -216,12 +216,14 @@
 }
 
 .product-list-item-image {
-  max-width: 200px;
+  height: 200px;
   margin: 0 12px;
+  width: 200px;
 
   @media @small-screen {
-    max-width: 80px;
+    height: 80px;
     margin: 6px;
+    width: 80px;
   }
 }
 
