--- a/app/views/product-show.html
+++ b/app/views/product-show.html
@@ -22,7 +22,7 @@
             </div>
             <div class="product-info-header-text">
               <h4 class="product-name">{{ product.nombre }}</h4>
-              <p class="product-description">{{ product.descripcion }}</p>
+              <div marked="product.descripcion" class="product-description"></div>
             </div>
           </div>
         </div>
@@ -40,7 +40,7 @@
                 <span class="product-technical-info-field-icon icon-uso"></span>
                 <div class="product-technical-info-field">
                   <p class="product-technical-info-field-key">Uso</p>
-                  <p class="product-technical-info-field-value">{{ formatList(product.uso) }}</p>
+                  <p class="product-technical-info-field-value">{{ formatList(product.uso) || '-'  }}</p>
                 </div>
               </div>
 
@@ -48,7 +48,7 @@
                 <span class="product-technical-info-field-icon icon-entonadores"></span>
                 <div class="product-technical-info-field">
                   <p class="product-technical-info-field-key">Entonadores</p>
-                  <p class="product-technical-info-field-value">{{ product.entonadores }}</p>
+                  <p class="product-technical-info-field-value">{{ product.entonadores || '-'  }}</p>
                 </div>
               </div>
 
@@ -56,7 +56,7 @@
                 <span class="product-technical-info-field-icon icon-rendimiento"></span>
                 <div class="product-technical-info-field">
                   <p class="product-technical-info-field-key">Rendimiento</p>
-                  <p class="product-technical-info-field-value">{{ product.rendimiento }}</p>
+                  <p class="product-technical-info-field-value">{{ product.rendimiento || '-'  }}</p>
                 </div>
               </div>
             </div>
@@ -66,7 +66,7 @@
                 <span class="product-technical-info-field-icon icon-resistencia"></span>
                 <div class="product-technical-info-field">
                   <p class="product-technical-info-field-key">Resistencia al frote</p>
-                  <p class="product-technical-info-field-value">{{ formatList(product.resistencia) }}</p>
+                  <p class="product-technical-info-field-value">{{ formatList(product.resistencia) || '-'  }}</p>
                 </div>
               </div>
 
@@ -74,7 +74,7 @@
                 <span class="product-technical-info-field-icon icon-secado"></span>
                 <div class="product-technical-info-field">
                   <p class="product-technical-info-field-key">Secado</p>
-                  <p class="product-technical-info-field-value">{{ product.secado }}</p>
+                  <p class="product-technical-info-field-value">{{ product.secado || '-' }}</p>
                 </div>
               </div>
 
@@ -82,7 +82,7 @@
                 <span class="product-technical-info-field-icon icon-presentacion"></span>
                 <div class="product-technical-info-field">
                   <p class="product-technical-info-field-key">Presentacion</p>
-                  <p class="product-technical-info-field-value">{{ product.presentacion }}</p>
+                  <p class="product-technical-info-field-value">{{ product.presentacion || '-'  }}</p>
                 </div>
               </div>
             </div>
@@ -97,23 +97,23 @@
               <div class="product-extra-info-header compose"></div>
               <div class="product-extra-info">
                 <p class="product-extra-info-key">Componer colores</p>
-                <p class="product-extra-info-value">{{ product.componerColores }}</p>
+                <div marked="product.componerColores" class="product-extra-info-value"></div>
               </div>
             </div>
 
-            <div class="product-extra-info-item">
+            <div class="product-extra-info-item" ng-if="product.preparacionDeLaSuperficie">
               <div class="product-extra-info-header surface"></div>
               <div class="product-extra-info">
                 <p class="product-extra-info-key">Preparación de la superficie</p>
-                <p class="product-extra-info-value">{{ product.preparacionDeLaSuperficie }}</p>
+                <div marked="product.preparacionDeLaSuperficie" class="product-extra-info-value"></div>
               </div>
             </div>
 
-            <div class="product-extra-info-item">
+            <div class="product-extra-info-item" ng-if="product.aplicacionDelProducto">
               <div class="product-extra-info-header application"></div>
               <div class="product-extra-info">
                 <p class="product-extra-info-key">Aplicación del producto</p>
-                <p class="product-extra-info-value">{{ product.aplicacionDelProducto }}</p>
+                <div marked="product.aplicacionDelProducto" class="product-extra-info-value"></div>
               </div>
             </div>
 
